# seqsee

./: Cargo.toml  README.md  test_ansi.txt
src/: formatter.rs  lib.rs  main.rs  parser.rs
src/ansi/: csi.rs  ctrl.rs  mod.rs
src/output/: mod.rs  raw.rs  table.rs
